25_s3_monitor/tests/integration/setup.ts
// global.console = {
//     ...console,
//     // uncomment to ignore a specific log level
//     log: jest.fn(),
//     debug: jest.fn(),
//     info: jest.fn(),
//     // warn: jest.fn(),
//     // error: jest.fn(),
// }

/*beforeAll(() => {
    jest.spyOn(console, 'log').mockImplementation(() => {})
    jest.spyOn(console, 'error').mockImplementation(() => {})
    jest.spyOn(console, 'warn').mockImplementation(() => {})
    jest.spyOn(console, 'info').mockImplementation(() => {})
    jest.spyOn(console, 'debug').mockImplementation(() => {})
})*/
